# nmpde-projects

./: .gitignore  CMakeLists.txt  Parab_multi.cpp  Parab_multi.hpp  README.md  exercise_multiparab.cpp
.github/workflows/: scalability.yml  verification.yml
docs/: report.tex
scripts/: run_model_validation.sh  run_scalability.sh  run_verification.sh  validate_model.py
src/: Heat.cpp  Heat.hpp  space-time-adaptivity.cpp
src/non-adaptive/: Heat.cpp  Heat.hpp  non-adaptive.cpp
src/space-time-adaptivity/: Heat.cpp  Heat.hpp  space-time-adaptivity.cpp
